contrib/k8s/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
spec:
  strategy:
    type: Recreate
